committing generated nbdev html pages

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -34,9 +34,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#| hide\n",
     "```sh\n",
     "pip install tensorflow_dev_cert_bootcamp\n",
     "```"
