Added nbdev html doc generation procedure

--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -35,39 +35,57 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
+    "## How to Generate Nbdev docs"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    " The below steps helps to generate the documentation of the learning as webpage and the same can be accessed through GIT for future refernces"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "language": "python"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "1+1"
+    "Once the ML project template is created through cookiecutter\n",
+    "\n",
+    "1. Rename the notebooks folder to nbs\n",
+    "\n",
+    "2. Then run command \"nbdev_new\" in terminal\n",
+    "\n",
+    "    nbdev_new =>\n",
+    "        This command would generate the necessary files within the project repository folder required for the - module build purposes and for documentation.\n",
+    "\n",
+    "3. for document only repository - like practise or learning projects     refer - https://nbdev.fast.ai/tutorials/docs_only.html\n",
+    "\n",
+    "    run below commands \n",
+    "        rm setup.py .github/workflows/test.yaml nbs/00_core.ipynb\n",
+    "\n",
+    "    Remove your library folder (this will be the lib_path field in settings.ini)    \n",
+    "\n",
+    "4. Then run command \"nbdev_docs\" in terminal\n",
+    "\n",
+    "    This command will generate html pages for all the jupyter notebooks.\n",
+    "\n",
+    "        https://nbdev.fast.ai/api/quarto.html#nbdev_docs\n",
+    "\n",
+    "5. push the changes to git repository\n",
+    "\n",
+    "6. Access webpage pertaining to a specific jupyter note book with github pages link appended with html page generated for the notebook. which can be checked in _docs folder in the repository.\n",
+    "\n",
+    "    for the html generated for the notebook \"tensorflow_dev_cert_bootcamp/nbs/1_DL_and_TF_Fundamentals.ipynb\" the _docs folder has html page \"_docs/dl_and_tf_fundamentals.html\"\n",
+    "    Hence we need to append \"dl_and_tf_fundamentals\" to the existing github repo pages which is \"https://lohithreddy86.github.io/tensorflow_dev_cert_bootcamp/\" as below.\n",
+    "\n",
+    "        https://lohithreddy86.github.io/tensorflow_dev_cert_bootcamp/dl_and_tf_fundamentals\n",
+    "    "
    ]
   },
   {
