updated git commands and cookie cutter steps

--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -28,10 +28,64 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
+    "## GIT Commands"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "git status => to find the uncommitted files in local git repo \n",
+    "\n",
+    "git add .  => to add all files from repo for commit \n",
+    "git add <specific file name> => for adding any specific file for commit\n",
+    "\n",
+    "sudo git commit -m \"commit message\"  => this makes files ready for commit with comment\n",
+    "\n",
+    "sudo git push origin <branch_name> \n",
+    "\n",
+    "sudo git push  => pushes changes and syncs the remote with local\n",
+    "\t\t\t\t=> this will ask git username and password post that commits the local to remote/online public repo"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cookiecutter steps"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. navigate to the folder where you want to create a new project\n",
+    "\teg - cd /home/dlvaayuai/storage/\n",
+    "\n",
+    "3. activate the required conda environment\n",
+    "\teg - conda activate deep_lrnr\n",
+    "\n",
+    "4. cookiecutter -c v1 https://github.com/drivendata/cookiecutter-data-science\n",
+    "\tanswer questions\n",
+    "\tproject with template folder structure is created\n",
+    "\t\n",
+    "5. git init\n",
+    "6. git add .\n",
+    "7. git status\n",
+    "8. git config --global user.email \"lohithreddy86@gmail.com\"\n",
+    "9. git config --global user.name \"lohithreddy86\"\n",
+    "10. git commit -m \"Initial Commit with files and folder created through cookie cutter\"\n",
+    "11. git branch -M main\n",
+    "12. Go to github and create the new repository  eg - tensorflow_dev_cert_bootcamp\n",
+    "13. git remote add origin https://github.com/lohithreddy86/tensorflow_dev_cert_bootcamp.git\n",
+    "14. git push -u origin main"
    ]
   },
   {
@@ -47,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " The below steps helps to generate the documentation of the learning as webpage and the same can be accessed through GIT for future refernces"
+    " The below steps helps to generate the documentation of the learnings as webpage and the same can be accessed through GIT for future refernces"
    ]
   },
   {
